--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </section>
 
 <section class="section--center mdl-grid site-max-width homepage-portfolio">
-    <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio.html">Ver Catálogo</a>
+    <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="catalogo.html">Ver Catálogo</a>
 </section>
 
 <div class="homepage-footer">
